--- a/slide/create_home_infrastructure_1.html
+++ b/slide/create_home_infrastructure_1.html
@@ -171,7 +171,7 @@
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="13" data-paginate="true" data-header="自宅インフラを構築した (1) ネットワークまわりの改造" data-footer="AiTachi, GitHub:[tcbn-ai](https://github.com/tcbn-ai), Twitter: [@tcbn_ai](https://twitter.com/tcbn_ai)" data-theme="gaia" data-heading-divider="2" data-marpit-pagination="13" data-marpit-pagination-total="18" style="--paginate:true;--header:自宅インフラを構築した (1) ネットワークまわりの改造;--footer:AiTachi, GitHub:[tcbn-ai](https://github.com/tcbn-ai), Twitter: [@tcbn_ai](https://twitter.com/tcbn_ai);--theme:gaia;--heading-divider:2;" data-size="16:9">
 <header>自宅インフラを構築した (1) ネットワークまわりの改造</header>
-<p><img src="../fig/ver1_change_network_config/config_ver1.svg" alt="" /></p>
+<p><img src="../fig/ver1_change_network_config/config_ver1.1.svg" alt="" /></p>
 <footer>AiTachi, GitHub:<a href="https://github.com/tcbn-ai">tcbn-ai</a>, Twitter: <a href="https://twitter.com/tcbn_ai">@tcbn_ai</a></footer>
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section data-paginate="true" data-header="自宅インフラを構築した (1) ネットワークまわりの改造" data-footer="AiTachi, GitHub:[tcbn-ai](https://github.com/tcbn-ai), Twitter: [@tcbn_ai](https://twitter.com/tcbn_ai)" data-theme="gaia" data-heading-divider="2" data-marpit-pagination="14" data-marpit-pagination-total="18" style="--paginate:true;--header:自宅インフラを構築した (1) ネットワークまわりの改造;--footer:AiTachi, GitHub:[tcbn-ai](https://github.com/tcbn-ai), Twitter: [@tcbn_ai](https://twitter.com/tcbn_ai);--theme:gaia;--heading-divider:2;" data-size="16:9" data-marpit-advanced-background="background"><div data-marpit-advanced-background-container="true" data-marpit-advanced-background-direction="horizontal"><figure style="background-image:url(&quot;../fig/ver1_change_network_config/img_2295-fs8.png&quot;);background-size:550px auto;"></figure><figure style="background-image:url(&quot;../fig/ver1_change_network_config/img_2294-fs8.png&quot;);background-size:auto 550px;"></figure></div></section></foreignObject><foreignObject width="1280" height="720"><section id="14" data-paginate="true" data-header="自宅インフラを構築した (1) ネットワークまわりの改造" data-footer="AiTachi, GitHub:[tcbn-ai](https://github.com/tcbn-ai), Twitter: [@tcbn_ai](https://twitter.com/tcbn_ai)" data-theme="gaia" data-heading-divider="2" data-marpit-pagination="14" data-marpit-pagination-total="18" style="--paginate:true;--header:自宅インフラを構築した (1) ネットワークまわりの改造;--footer:AiTachi, GitHub:[tcbn-ai](https://github.com/tcbn-ai), Twitter: [@tcbn_ai](https://twitter.com/tcbn_ai);--theme:gaia;--heading-divider:2;" data-size="16:9" data-marpit-advanced-background="content">
@@ -188,9 +188,9 @@
 <li>やらかしても会社端末への影響を最小限に抑えるため (VPN使ってるけどね)</li>
 </ul>
 </li>
-<li>個人用の中でも有線と無線のセグメントを分けた
+<li>そこそこ良いルーターを使った
 <ul>
-<li>リスク源の切り分け</li>
+<li>そもそもの回線があまり良くないから、引っ越しも視野に入れる</li>
 </ul>
 </li>
 </ul>
